Introduced PlatformPublisher and cleaned up report generation